apps/adguard-home/adguard-ingress.yaml
# Ingress for Adguard Home

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home
  namespace: default
spec: 
  entryPoints:
    - web
  routes:
    - match: Host(`adguard.local`)
      kind: Rule
      services:
        - name: adguard-home
          port: 3000
          kind: Service
